<resources>
    <string name="app_name">SkillNet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="lh">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Welcome</string>
    <string name="email">Email</string>
    <string name="login_now">Login Now</string>
    <string name="sign_up_for_new_users">Sign Up For New Users</string>
    <string name="logout">Logout</string>
    <string name="password2">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account_log_in">Already have an Account?</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome,</string>
    <string name="please_create_an_account_to_continue">Please create an account to continue!</string>
    <string name="aaa">Confirm Password</string>
    <string name="aa">Sign Up</string>
    <string name="project_image">Project Image</string>
    <string name="rating_bar_description">review</string>
    <string name="profile_image_desc">back button in loging</string>
</resources>